# Gary

./: .gitignore  .gitmodules  Gary.py  GaryIntentClassifier.py  GaryNER.py  Gmail.py  Process.txt  Pushover.py  Result.py  add_training_examples.py  helper.py  pyproject.toml  quick_test.py
APPS/: Coup_Test.py  Grade_Checker_GARY_API.py  MDLottery2.py  MDLottery3.py  Scrape_API.py  Train_API.py  WVLottery2.py  WVLottery3.py
Brain/: intent.pkl  meta.json
Brain/ner/: model  moves
Brain/vocab/: strings.json
